[OAP-TOOL-96]Modify Gazelle config on Dataproc notebooks

--- a/integrations/oap/dataproc/notebooks/tpcds_power_test_with_gazelle_plugin_Dataproc.ipynb
+++ b/integrations/oap/dataproc/notebooks/tpcds_power_test_with_gazelle_plugin_Dataproc.ipynb
@@ -2,65 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "0b6a5023-067b-499c-bdc1-5c2662a96d18",
+   "execution_count": null,
+   "id": "fd7619f6-14ae-461f-bc92-aa49c16155e4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!echo -e \"spark.driver.extraLibraryPath=file:///opt/benchmark-tools/oap/lib\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.executor.extraLibraryPath=file:///opt/benchmark-tools/oap/lib\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.executorEnv.LD_LIBRARY_PATH=file:///opt/benchmark-tools/oap/lib\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.executorEnv.LIBARROW_DIR=file:///opt/benchmark-tools/oap\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.executorEnv.CC=file:///opt/benchmark-tools/oap/bin/gcc\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.sql.extensions=com.intel.oap.ColumnarPlugin\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.files=file:///opt/benchmark-tools/oap/oap_jars/spark-columnar-core-1.2.0-snapshot-jar-with-dependencies.jar,file:///opt/benchmark-tools/oap/oap_jars/spark-arrow-datasource-standard-1.2.0-snapshot-jar-with-dependencies.jar\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.driver.extraClassPath=file:///opt/benchmark-tools/oap/oap_jars/spark-columnar-core-1.2.0-snapshot-jar-with-dependencies.jar:file:///opt/benchmark-tools/oap/oap_jars/spark-arrow-datasource-standard-1.2.0-snapshot-jar-with-dependencies.jar:file:///opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.executor.extraClassPath=file:///opt/benchmark-tools/oap/oap_jars/spark-columnar-core-1.2.0-snapshot-jar-with-dependencies.jar:file:///opt/benchmark-tools/oap/oap_jars/spark-arrow-datasource-standard-1.2.0-snapshot-jar-with-dependencies.jar:file:///opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.executor.instances=4\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.executor.cores=2\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.executor.memory=4g\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.executor.memoryOverhead=2989\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.memory.offHeap.enabled=false\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.memory.offHeap.size=3g\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.driver.maxResultSize=3g\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.shuffle.manager=org.apache.spark.shuffle.sort.ColumnarShuffleManager\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.oap.sql.columnar.sortmergejoin=true\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.oap.sql.columnar.preferColumnar=true\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.oap.sql.columnar.joinOptimizationLevel=12\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.sql.autoBroadcastJoinThreshold=31457280\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.sql.adaptive.enabled=true\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.sql.inMemoryColumnarStorage.batchSize=20480\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.sql.sources.useV1SourceList=avro\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.sql.extensions=com.intel.oap.ColumnarPlugin\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.sql.columnar.window=true\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.sql.columnar.sort=true\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.sql.execution.arrow.maxRecordsPerBatch=20480\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.sql.parquet.columnarReaderBatchSize=20480\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.sql.columnar.codegen.hashAggregate=false\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.sql.join.preferSortMergeJoin=false\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.sql.broadcastTimeout=3600\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.authenticate=false\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.history.fs.cleaner.enabled=true\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.eventLog.enabled=true\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.network.timeout=3600s\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.serializer=org.apache.spark.serializer.KryoSerializer\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.kryoserializer.buffer=64m\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.kryoserializer.buffer.max=256m\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.dynamicAllocation.executorIdleTimeout=3600s\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.network.timeout=3600s\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo -e \"spark.sql.warehouse.dir=hdfs:///user/livy\">> /etc/spark/conf/spark-defaults.conf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "6c35826d-05f3-4ed1-980a-7d35f0abf558",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!export CC=/opt/benchmark-tools/oap/bin/gcc\n",
-    "!export LIBARROW_DIR=/opt/benchmark-tools/oap\n",
-    "!export LD_LIBRARY_PATH=/opt/benchmark-tools/oap/lib/:$LD_LIBRARY_PATH"
+    "!echo  \"spark.executorEnv.LD_LIBRARY_PATH=/opt/benchmark-tools/oap/lib\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.executor.extraLibraryPath=/opt/benchmark-tools/oap/lib\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.driver.extraLibraryPath=/opt/benchmark-tools/oap/lib\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.executorEnv.LIBARROW_DIR=/opt/benchmark-tools/oap\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.executorEnv.CC=/opt/benchmark-tools/oap/bin/gcc\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.sql.extensions=com.intel.oap.ColumnarPlugin\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.files=/opt/benchmark-tools/oap/oap_jars/spark-columnar-core-1.2.0-snapshot-jar-with-dependencies.jar,/opt/benchmark-tools/oap/oap_jars/spark-arrow-datasource-standard-1.2.0-snapshot-jar-with-dependencies.jar,/opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.driver.extraClassPath=/opt/benchmark-tools/oap/oap_jars/spark-columnar-core-1.2.0-snapshot-jar-with-dependencies.jar:/opt/benchmark-tools/oap/oap_jars/spark-arrow-datasource-standard-1.2.0-snapshot-jar-with-dependencies.jar:/opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.executor.extraClassPath=/opt/benchmark-tools/oap/oap_jars/spark-columnar-core-1.2.0-snapshot-jar-with-dependencies.jar:/opt/benchmark-tools/oap/oap_jars/spark-arrow-datasource-standard-1.2.0-snapshot-jar-with-dependencies.jar:/opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.oap.sql.columnar.preferColumnar=true\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.sql.join.preferSortMergeJoin=false\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.oap.sql.columnar.joinOptimizationLevel=12\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.sql.broadcastTimeout=3600\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.executor.memoryOverhead=2989\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.dynamicAllocation.executorIdleTimeout=3600s\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.sql.autoBroadcastJoinThreshold=31457280\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.shuffle.manager=org.apache.spark.shuffle.sort.ColumnarShuffleManager\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.oap.sql.columnar.sortmergejoin=true\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.oap.sql.columnar.preferColumnar=true\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.oap.sql.columnar.joinOptimizationLevel=12\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.sql.autoBroadcastJoinThreshold=31457280\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.kryoserializer.buffer.max=256m\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.executor.memory=4g\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.executor.cores=2\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.sql.adaptive.enabled=true\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.driver.memory=2g\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.network.timeout=3600s\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.oap.sql.columnar.sortmergejoin=true\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.memory.offHeap.enabled=false\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.eventLog.enabled=true\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.executor.instances=4\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.sql.inMemoryColumnarStorage.batchSize=20480\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.driver.maxResultSize=3g\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.sql.sources.useV1SourceList=avro\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.sql.extensions=com.intel.oap.ColumnarPlugin\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.history.fs.cleaner.enabled=true\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.serializer=org.apache.spark.serializer.KryoSerializer\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.sql.columnar.window=true\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.sql.columnar.sort=true\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.dynamicAllocation.executorIdleTimeout=3600s\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.sql.execution.arrow.maxRecordsPerBatch=20480\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.kryoserializer.buffer=64m\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.sql.shuffle.partitions=72\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.sql.parquet.columnarReaderBatchSize=20480\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.shuffle.manager=org.apache.spark.shuffle.sort.ColumnarShuffleManager\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.serializer=org.apache.spark.serializer.KryoSerializer\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.authenticate=false\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.sql.columnar.codegen.hashAggregate=false\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.memory.offHeap.size=3g\">> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo  \"spark.sql.warehouse.dir=hdfs:///user/livy\">> /etc/spark/conf/spark-defaults.conf"
    ]
   },
   {
