Update the notebooks tpcds_throughput_test.ipynb and tpcds_throughput_test_with_gazelle_plugin, and print execution time of each streams

--- a/integrations/oap/emr/notebooks/tpcds_throughput_test_with_gazelle_plugin.ipynb
+++ b/integrations/oap/emr/notebooks/tpcds_throughput_test_with_gazelle_plugin.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c07ddaf",
+   "id": "c2d16b07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d562cf4",
+   "id": "93f5d5c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,8 +45,11 @@
     "import java.util.Date\n",
     "import java.util.concurrent.Executors\n",
     "import java.util.concurrent.ExecutorService\n",
+    "import java.util.concurrent.TimeUnit\n",
     "import com.databricks.spark.sql.perf.tpcds.TPCDS\n",
     "import com.databricks.spark.sql.perf.Benchmark.ExperimentStatus\n",
+    "import org.apache.spark.sql.DataFrame\n",
+    "import org.apache.spark.sql.functions.{col, lit, substring}\n",
     "\n",
     "val stream_num = 2              // how many streams you want to start \n",
     "val scaleFactor = \"1\"           // data scale 1GB\n",
@@ -73,7 +76,7 @@
     "    resultLocation = s\"${storage}://${bucket_name}/results/tpcds_arrow/${scaleFactor}/\"\n",
     "    databaseName = s\"tpcds_arrow_scale_${scaleFactor}_db\"\n",
     "    val tables = Seq(\"call_center\", \"catalog_page\", \"catalog_returns\", \"catalog_sales\", \"customer\", \"customer_address\", \"customer_demographics\", \"date_dim\", \"household_demographics\", \"income_band\", \"inventory\", \"item\", \"promotion\", \"reason\", \"ship_mode\", \"store\", \"store_returns\", \"store_sales\", \"time_dim\", \"warehouse\", \"web_page\", \"web_returns\", \"web_sales\", \"web_site\")\n",
-    "    sql(s\"DROP database if exists $databaseName CASCADE\")\n",
+    "    sql(s\"DROP database $databaseName CASCADE\")\n",
     "    if (spark.catalog.databaseExists(s\"$databaseName\")) {\n",
     "        println(s\"$databaseName has exists!\")\n",
     "    }else{\n",
@@ -111,10 +114,12 @@
     "    if (randomizeQueries) scala.util.Random.shuffle(filtered_queries) else filtered_queries\n",
     "}\n",
     "\n",
-    "class ThreadStream(experiment:ExperimentStatus) extends Thread{\n",
+    "class ThreadStream(experiment:ExperimentStatus, i:Int) extends Thread{\n",
     "    override def run(){\n",
+    "        println(\"stream_\" + i + \" has started...\")\n",
     "        println(experiment.toString)\n",
     "        experiment.waitForFinish(timeout*60*60)\n",
+    "        println(\"stream_\" + i + \" has finished.\")\n",
     "    }\n",
     "}\n",
     "\n",
@@ -129,11 +134,25 @@
     "            resultLocation = resultLocation,\n",
     "            tags = Map(\"runtype\" -> \"benchmark\", \"database\" -> databaseName, \"scale_factor\" -> scaleFactor)\n",
     "        )\n",
-    "        threadPool.execute(new ThreadStream(experiments(i)))\n",
+    "        threadPool.execute(new ThreadStream(experiments(i), i))\n",
     "    }\n",
     "}finally{\n",
     "    threadPool.shutdown()\n",
-    "}"
+    "    threadPool.awaitTermination(Long.MaxValue, TimeUnit.NANOSECONDS)\n",
+    "}\n",
+    "\n",
+    "val summary_dfs:Array[DataFrame] = new Array[DataFrame](stream_num)\n",
+    "for(i <- 0 to (stream_num - 1)){\n",
+    "   summary_dfs(i) = experiments(i).getCurrentResults.withColumn(\"Name\", substring(col(\"name\"), 2, 100)).withColumn(\"Runtime\", (col(\"parsingTime\") + col(\"analysisTime\") + col(\"optimizationTime\") + col(\"planningTime\") + col(\"executionTime\")) / 1000.0).select('Name, 'Runtime).agg(sum(\"Runtime\")).withColumn(\"stream\", lit(\"stream_\" + i)).select(\"stream\", \"sum(Runtime)\")\n",
+    "}\n",
+    "var summary_df = summary_dfs(0)\n",
+    "for (i <- 0 to (stream_num - 1)){\n",
+    "    if (i != 0) {\n",
+    "        summary_df = summary_df.union(summary_dfs(i))\n",
+    "    }   \n",
+    "}\n",
+    "summary_df = summary_df.union(summary_df.agg(max(\"sum(Runtime)\")).withColumnRenamed(\"max(sum(Runtime))\",\"sum(Runtime)\").withColumn(\"stream\", lit(\"max_stream\")).select(\"stream\", \"sum(Runtime)\"))\n",
+    "summary_df.show()"
    ]
   }
  ],
