--- a/integrations/oap/emr/notebooks/tpcds_throughput_test.ipynb
+++ b/integrations/oap/emr/notebooks/tpcds_throughput_test.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5bcc861",
+   "id": "8b648505",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "497c4b45",
+   "id": "c03f97d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,8 +23,11 @@
     "import java.util.Date\n",
     "import java.util.concurrent.Executors\n",
     "import java.util.concurrent.ExecutorService\n",
+    "import java.util.concurrent.TimeUnit\n",
     "import com.databricks.spark.sql.perf.tpcds.TPCDS\n",
     "import com.databricks.spark.sql.perf.Benchmark.ExperimentStatus\n",
+    "import org.apache.spark.sql.DataFrame\n",
+    "import org.apache.spark.sql.functions.{col, lit, substring}\n",
     "\n",
     "val stream_num = 2              // how many streams you want to start \n",
     "val scaleFactor = \"1\"           // data scale 1GB\n",
@@ -89,10 +92,12 @@
     "    if (randomizeQueries) scala.util.Random.shuffle(filtered_queries) else filtered_queries\n",
     "}\n",
     "\n",
-    "class ThreadStream(experiment:ExperimentStatus) extends Thread{\n",
+    "class ThreadStream(experiment:ExperimentStatus, i:Int) extends Thread{\n",
     "    override def run(){\n",
+    "        println(\"stream_\" + i + \" has started...\")\n",
     "        println(experiment.toString)\n",
     "        experiment.waitForFinish(timeout*60*60)\n",
+    "        println(\"stream_\" + i + \" has finished.\")\n",
     "    }\n",
     "}\n",
     "\n",
@@ -107,11 +112,25 @@
     "            resultLocation = resultLocation,\n",
     "            tags = Map(\"runtype\" -> \"benchmark\", \"database\" -> databaseName, \"scale_factor\" -> scaleFactor)\n",
     "        )\n",
-    "        threadPool.execute(new ThreadStream(experiments(i)))\n",
+    "        threadPool.execute(new ThreadStream(experiments(i), i))\n",
     "    }\n",
     "}finally{\n",
     "    threadPool.shutdown()\n",
-    "}"
+    "    threadPool.awaitTermination(Long.MaxValue, TimeUnit.NANOSECONDS)\n",
+    "}\n",
+    "\n",
+    "val summary_dfs:Array[DataFrame] = new Array[DataFrame](stream_num)\n",
+    "for(i <- 0 to (stream_num - 1)){\n",
+    "   summary_dfs(i) = experiments(i).getCurrentResults.withColumn(\"Name\", substring(col(\"name\"), 2, 100)).withColumn(\"Runtime\", (col(\"parsingTime\") + col(\"analysisTime\") + col(\"optimizationTime\") + col(\"planningTime\") + col(\"executionTime\")) / 1000.0).select('Name, 'Runtime).agg(sum(\"Runtime\")).withColumn(\"stream\", lit(\"stream_\" + i)).select(\"stream\", \"sum(Runtime)\")\n",
+    "}\n",
+    "var summary_df = summary_dfs(0)\n",
+    "for (i <- 0 to (stream_num - 1)){\n",
+    "    if (i != 0) {\n",
+    "        summary_df = summary_df.union(summary_dfs(i))\n",
+    "    }   \n",
+    "}\n",
+    "summary_df = summary_df.union(summary_df.agg(max(\"sum(Runtime)\")).withColumnRenamed(\"max(sum(Runtime))\",\"sum(Runtime)\").withColumn(\"stream\", lit(\"max_stream\")).select(\"stream\", \"sum(Runtime)\"))\n",
+    "summary_df.show()"
    ]
   }
  ],
