--- a/integrations/oap/emr/notebooks/tpcds_throughput_test.ipynb
+++ b/integrations/oap/emr/notebooks/tpcds_throughput_test.ipynb
@@ -44,14 +44,14 @@
     "    bucket_name = \"/user/livy\"  // scala notebook only has the write permission of \"hdfs:///user/livy\" directory               \n",
     "}\n",
     "\n",
-    "val current_time = new SimpleDateFormat(\"yyyy-MM-dd-HH:mm:ss\").format(new Date)\n",
+    "val current_time = new SimpleDateFormat(\"yyyy-MM-dd-HH-mm-ss\").format(new Date)\n",
     "var resultLocation = s\"${storage}://${bucket_name}/results/tpcds_${format}/${scaleFactor}/${current_time}\"\n",
     "var databaseName = s\"tpcds_${format}_scale_${scaleFactor}_db\"\n",
     "val use_arrow = false            // when you want to use gazella_plugin to run TPC-DS, you need to set it true.\n",
     "\n",
     "if (use_arrow){\n",
     "    val data_path = s\"${storage}://${bucket_name}/datagen/tpcds_${format}/${scaleFactor}\"\n",
-    "    resultLocation = s\"${storage}://${bucket_name}/results/tpcds_arrow/${scaleFactor}/\"\n",
+    "    resultLocation = s\"${storage}://${bucket_name}/results/tpcds_arrow/${scaleFactor}/${current_time}\"\n",
     "    databaseName = s\"tpcds_arrow_scale_${scaleFactor}_db\"\n",
     "    val tables = Seq(\"call_center\", \"catalog_page\", \"catalog_returns\", \"catalog_sales\", \"customer\", \"customer_address\", \"customer_demographics\", \"date_dim\", \"household_demographics\", \"income_band\", \"inventory\", \"item\", \"promotion\", \"reason\", \"ship_mode\", \"store\", \"store_returns\", \"store_sales\", \"time_dim\", \"warehouse\", \"web_page\", \"web_returns\", \"web_sales\", \"web_site\")\n",
     "    sql(s\"DROP database $databaseName CASCADE\")\n",
