--- a/integrations/oap/dataproc/notebooks/tpcds_power_test_with_gazelle_plugin_Dataproc.ipynb
+++ b/integrations/oap/dataproc/notebooks/tpcds_power_test_with_gazelle_plugin_Dataproc.ipynb
@@ -7,56 +7,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!echo  \"spark.executorEnv.LD_LIBRARY_PATH=/opt/benchmark-tools/oap/lib\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.executor.extraLibraryPath=/opt/benchmark-tools/oap/lib\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.driver.extraLibraryPath=/opt/benchmark-tools/oap/lib\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.executorEnv.LIBARROW_DIR=/opt/benchmark-tools/oap\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.executorEnv.CC=/opt/benchmark-tools/oap/bin/gcc\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.sql.extensions=com.intel.oap.ColumnarPlugin\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.files=/opt/benchmark-tools/oap/oap_jars/spark-columnar-core-1.2.0-jar-with-dependencies.jar,/opt/benchmark-tools/oap/oap_jars/spark-arrow-datasource-standard-1.2.0-jar-with-dependencies.jar,/opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.driver.extraClassPath=/opt/benchmark-tools/oap/oap_jars/spark-columnar-core-1.2.0-jar-with-dependencies.jar:/opt/benchmark-tools/oap/oap_jars/spark-arrow-datasource-standard-1.2.0-jar-with-dependencies.jar:/opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.executor.extraClassPath=/opt/benchmark-tools/oap/oap_jars/spark-columnar-core-1.2.0-jar-with-dependencies.jar:/opt/benchmark-tools/oap/oap_jars/spark-arrow-datasource-standard-1.2.0-jar-with-dependencies.jar:/opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.oap.sql.columnar.preferColumnar=true\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.sql.join.preferSortMergeJoin=false\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.oap.sql.columnar.joinOptimizationLevel=12\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.sql.broadcastTimeout=3600\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.executor.memoryOverhead=2989\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.dynamicAllocation.executorIdleTimeout=3600s\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.sql.autoBroadcastJoinThreshold=31457280\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.shuffle.manager=org.apache.spark.shuffle.sort.ColumnarShuffleManager\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.oap.sql.columnar.sortmergejoin=true\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.oap.sql.columnar.preferColumnar=true\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.oap.sql.columnar.joinOptimizationLevel=12\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.sql.autoBroadcastJoinThreshold=31457280\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.kryoserializer.buffer.max=256m\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.executor.memory=4g\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.executor.cores=2\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.sql.adaptive.enabled=true\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.driver.memory=2g\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.network.timeout=3600s\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.oap.sql.columnar.sortmergejoin=true\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.memory.offHeap.enabled=false\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.eventLog.enabled=true\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.executor.instances=4\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.sql.inMemoryColumnarStorage.batchSize=20480\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.driver.maxResultSize=3g\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.sql.sources.useV1SourceList=avro\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.sql.extensions=com.intel.oap.ColumnarPlugin\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.history.fs.cleaner.enabled=true\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.serializer=org.apache.spark.serializer.KryoSerializer\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.sql.columnar.window=true\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.sql.columnar.sort=true\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.dynamicAllocation.executorIdleTimeout=3600s\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.sql.execution.arrow.maxRecordsPerBatch=20480\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.kryoserializer.buffer=64m\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.sql.shuffle.partitions=72\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.sql.parquet.columnarReaderBatchSize=20480\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.shuffle.manager=org.apache.spark.shuffle.sort.ColumnarShuffleManager\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.serializer=org.apache.spark.serializer.KryoSerializer\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.authenticate=false\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.sql.columnar.codegen.hashAggregate=false\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.memory.offHeap.size=3g\">> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo  \"spark.sql.warehouse.dir=hdfs:///user/livy\">> /etc/spark/conf/spark-defaults.conf"
+    "%%init_spark\n",
+    "launcher.jars = [\"file:///opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar\", \"/opt/benchmark-tools/oap/oap_jars/spark-columnar-core-1.2.0-jar-with-dependencies.jar\",\"/opt/benchmark-tools/oap/oap_jars/spark-arrow-datasource-standard-1.2.0-jar-with-dependencies.jar\"]\n",
+    "launcher.conf.set(\"spark.driver.extraClassPath\", \"/opt/benchmark-tools/oap/oap_jars/spark-columnar-core-1.2.0-jar-with-dependencies.jar:/opt/benchmark-tools/oap/oap_jars/spark-arrow-datasource-standard-1.2.0-jar-with-dependencies.jar:/opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar\")\n",
+    "launcher.conf.set(\"spark.executor.extraClassPath\", \"/opt/benchmark-tools/oap/oap_jars/spark-columnar-core-1.2.0-jar-with-dependencies.jar:/opt/benchmark-tools/oap/oap_jars/spark-arrow-datasource-standard-1.2.0-jar-with-dependencies.jar:/opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar\")\n",
+    "launcher.conf.set(\"spark.sql.warehouse.dir\", \"hdfs:///user/livy\")\n",
+    "launcher.conf.set(\"spark.executorEnv.LD_LIBRARY_PATH\", \"/opt/benchmark-tools/oap/lib\")\n",
+    "launcher.conf.set(\"spark.executor.extraLibraryPath\", \"/opt/benchmark-tools/oap/lib\")\n",
+    "launcher.conf.set(\"spark.driver.extraLibraryPath\", \"/opt/benchmark-tools/oap/lib\")\n",
+    "launcher.conf.set(\"spark.executorEnv.LIBARROW_DIR\", \"/opt/benchmark-tools/oap\")\n",
+    "launcher.conf.set(\"spark.executorEnv.CC\", \"/opt/benchmark-tools/oap/bin/gcc\")\n",
+    "launcher.conf.set(\"spark.sql.extensions\", \"com.intel.oap.ColumnarPlugin\")\n",
+    "launcher.conf.set(\"spark.oap.sql.columnar.preferColumnar\", \"true\")\n",
+    "launcher.conf.set(\"spark.sql.join.preferSortMergeJoin\", \"false\")\n",
+    "launcher.conf.set(\"spark.oap.sql.columnar.joinOptimizationLevel\", \"12\")\n",
+    "launcher.conf.set(\"spark.sql.broadcastTimeout\", \"3600\")\n",
+    "launcher.conf.set(\"spark.executor.memoryOverhead\", \"2989\")\n",
+    "launcher.conf.set(\"spark.dynamicAllocation.executorIdleTimeout\", \"3600s\")\n",
+    "launcher.conf.set(\"spark.sql.autoBroadcastJoinThreshold\", \"31457280\")\n",
+    "launcher.conf.set(\"spark.kryoserializer.buffer.max\", \"256m\")\n",
+    "launcher.conf.set(\"spark.network.timeout\", \"3600s\")\n",
+    "launcher.conf.set(\"spark.memory.offHeap.enabled\", \"false\")\n",
+    "launcher.conf.set(\"spark.sql.inMemoryColumnarStorage.batchSize\", \"20480\")\n",
+    "launcher.conf.set(\"spark.sql.sources.useV1SourceList\", \"avro\")\n",
+    "launcher.conf.set(\"spark.sql.extensions\", \"com.intel.oap.ColumnarPlugin\")\n",
+    "launcher.conf.set(\"spark.serializer\", \"org.apache.spark.serializer.KryoSerializer\")\n",
+    "launcher.conf.set(\"spark.dynamicAllocation.executorIdleTimeout\", \"3600s\")\n",
+    "launcher.conf.set(\"spark.sql.execution.arrow.maxRecordsPerBatch\", \"20480\")\n",
+    "launcher.conf.set(\"spark.kryoserializer.buffer\", \"64m\")\n",
+    "launcher.conf.set(\"spark.sql.shuffle.partitions\", \"72\")\n",
+    "launcher.conf.set(\"spark.sql.parquet.columnarReaderBatchSize\", \"20480\")\n",
+    "launcher.conf.set(\"spark.shuffle.manager\", \"org.apache.spark.shuffle.sort.ColumnarShuffleManager\")\n",
+    "launcher.conf.set(\"spark.sql.columnar.codegen.hashAggregate\", \"false\")\n",
+    "launcher.conf.set(\"spark.memory.offHeap.size\", \"3g\")\n"
    ]
   },
   {
