--- a/integrations/oap/dataproc/notebooks/tpcds_power_test_Dataproc.ipynb
+++ b/integrations/oap/dataproc/notebooks/tpcds_power_test_Dataproc.ipynb
@@ -7,9 +7,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!echo \"spark.driver.extraClassPath=file:///opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar\" >> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo \"spark.executor.extraClassPath=file:///opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar\" >> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo \"spark.sql.warehouse.dir=hdfs:///user/livy\">> /etc/spark/conf/spark-defaults.conf"
+    "%%init_spark\n",
+    "launcher.jars = [\"file:///opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar\"]\n",
+    "launcher.conf.set(\"spark.sql.warehouse.dir\", \"hdfs:///user/livy\")"
    ]
   },
   {
