[OAP-TOOLs-204]Modify notebooks and add user guide for Azure ML

--- a/integrations/ml/azure/benchmark/benchmark_tensorflow_bertlarge_inference.ipynb
+++ b/integrations/ml/azure/benchmark/benchmark_tensorflow_bertlarge_inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c59998a2",
+   "id": "6405d48d",
    "metadata": {},
    "source": [
     "# Run BERT-Large inference workload"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b6b34d2",
+   "id": "4f631208",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "451fc0ec",
+   "id": "ca5b5afa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7aff7a7",
+   "id": "c64f0da7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7402e0fa",
+   "id": "fc1ee8e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,10 +151,10 @@
     "# Get the inference result\n",
     "numa_nodes=$(lscpu | awk '/^NUMA node\\(s\\)/{ print $3 }')\n",
     "if [ \"$numa_nodes\" = \"1\" ];then\n",
-    "        cd /TF/BERT-Large-output/bert-squad-output/\n",
+    "        cd ~/TF/bert-large/inference/BERT-Large-output/bert-squad-output/\n",
     "        cat benchmark*.log | grep \"throughput((num_processed_examples-threshod_examples)/Elapsedtime)\"\n",
     "else\n",
-    "        cd /TF/models-1.8.1/benchmarks/\n",
+    "        cd  ~/TF/bert-large/inference/models-1.8.1/benchmarks/\n",
     "        cat socket*-log | grep \"throughput((num_processed_examples-threshod_examples)/Elapsedtime)\"\n",
     "fi"
    ]
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3442a3f2",
+   "id": "0ccabd0e",
    "metadata": {},
    "outputs": [],
    "source": [
