--- a/integrations/ml/azure/benchmark/benchmark_tensorflow_bertlarge_training.ipynb
+++ b/integrations/ml/azure/benchmark/benchmark_tensorflow_bertlarge_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "101eba0f",
+   "id": "cf18f9d1",
    "metadata": {},
    "source": [
     "# Run BERT-Large training workload"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50a7a2d0",
+   "id": "9d23d4ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "770a6a5f",
+   "id": "c4464b01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,6 +46,7 @@
     "# BERT-Large training\n",
     "# Install necessary packages\n",
     "sudo apt-get install -y numactl\n",
+    "sudo apt-get install -y libblacs-mpi-dev\n",
     "# Create ckpt directory\n",
     "rm -rf  ~/TF/bert-large/training/*\n",
     "mkdir -p ~/TF/bert-large/training/BERT-Large-output\n",
@@ -61,20 +62,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5851e4de",
+   "id": "32a3cbaf",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "\n",
     "#Bert-Large training\n",
-    "export BERT_LARGE_OUTPUT=~/TF/bert-large/training/BERT-Large-output\n",
     "export SQUAD_DIR=~/TF/bert-large/SQuAD-1.1/\n",
-    "export BERT_LARGE_DIR=~/TF/bert-large/\n",
+    "export BERT_LARGE_OUTPUT=~/TF/bert-large/training/BERT-Large-output\n",
     "export BERT_LARGE_MODEL=~/TF/bert-large/wwm_uncased_L-24_H-1024_A-16\n",
     "export PYTHONPATH=~/TF/bert-large/training/models-1.8.1/benchmarks/\n",
+    "\n",
     "cores_per_socket=$(lscpu | awk '/^Core\\(s\\) per socket/{ print $4 }')\n",
     "numa_nodes=$(lscpu | awk '/^NUMA node\\(s\\)/{ print $3 }')\n",
+    "\n",
     "cd ~/TF/bert-large/training/models-1.8.1/benchmarks/\n",
     "\n",
     "function run_training_without_numabind() {\n",
@@ -116,11 +118,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "834c42e6",
+   "id": "1102158d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Print TensorFlow version, and check whether is intel-optimized\n",
+    "%%bash\n",
+    "\n",
+    "# Get the trarining result\n",
+    "numa_nodes=$(lscpu | awk '/^NUMA node\\(s\\)/{ print $3 }')\n",
+    "if [ \"$numa_nodes\" = \"1\" ];then\n",
+    "        cd ~/TF/bert-large/training/models-1.8.1/benchmarks/common/tensorflow/logs\n",
+    "        cat benchmark*.log | grep \"throughput((num_processed_examples-threshod_examples)/Elapsedtime)\"\n",
+    "else\n",
+    "        cd /home/azureuser/TF/bert-large/training/models-1.8.1/benchmarks/common/tensorflow/logs/\n",
+    "        # Single socket's throught\n",
+    "        cat benchmark*.log | grep \"throughput((num_processed_examples-threshod_examples)/Elapsedtime)\"\n",
+    "fi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0561db4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print TensorFlow version, and check whether it is intel-optimized\n",
     "\n",
     "import tensorflow\n",
     "print(\"tensorflow version: \" + tensorflow.__version__)\n",
