Add CloudTik introduction and links

--- a/integrations/oap/dataproc/notebooks/tpcds_power_test_with_gazelle_plugin_Dataproc.ipynb
+++ b/integrations/oap/dataproc/notebooks/tpcds_power_test_with_gazelle_plugin_Dataproc.ipynb
@@ -8,9 +8,9 @@
    "outputs": [],
    "source": [
     "%%init_spark\n",
-    "launcher.jars = [\"file:///opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar\", \"/opt/benchmark-tools/oap/oap_jars/spark-columnar-core-1.2.0-jar-with-dependencies.jar\",\"/opt/benchmark-tools/oap/oap_jars/spark-arrow-datasource-standard-1.2.0-jar-with-dependencies.jar\"]\n",
-    "launcher.conf.set(\"spark.driver.extraClassPath\", \"/opt/benchmark-tools/oap/oap_jars/spark-columnar-core-1.2.0-jar-with-dependencies.jar:/opt/benchmark-tools/oap/oap_jars/spark-arrow-datasource-standard-1.2.0-jar-with-dependencies.jar:/opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar\")\n",
-    "launcher.conf.set(\"spark.executor.extraClassPath\", \"/opt/benchmark-tools/oap/oap_jars/spark-columnar-core-1.2.0-jar-with-dependencies.jar:/opt/benchmark-tools/oap/oap_jars/spark-arrow-datasource-standard-1.2.0-jar-with-dependencies.jar:/opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar\")\n",
+    "launcher.jars = [\"file:///opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar\", \"/opt/benchmark-tools/oap/oap_jars/gazelle-plugin-1.4.0-spark-3.1.1.jar\"]\n",
+    "launcher.conf.set(\"spark.driver.extraClassPath\", \"/opt/benchmark-tools/oap/oap_jars/gazelle-plugin-1.4.0-spark-3.1.1.jar\")\n",
+    "launcher.conf.set(\"spark.executor.extraClassPath\", \"/opt/benchmark-tools/oap/oap_jars/gazelle-plugin-1.4.0-spark-3.1.1.jar\")\n",
     "launcher.conf.set(\"spark.sql.warehouse.dir\", \"hdfs:///user/livy\")\n",
     "launcher.conf.set(\"spark.executorEnv.LD_LIBRARY_PATH\", \"/opt/benchmark-tools/oap/lib\")\n",
     "launcher.conf.set(\"spark.executor.extraLibraryPath\", \"/opt/benchmark-tools/oap/lib\")\n",
